[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmm"
version = "0.2.0"
authors = [
    {name = "Steven Byrnes", email = "steven.byrnes@gmail.com"},
]
description = "Simulate light propagation in multilayer thin and/or thick films using the fresnel equations and transfer matrix method."
readme = "README.rst"
requires-python = ">=3"
keywords = ["optics", "fresnel", "reflection", "absorption", "photovoltaics", "ellipsometry", "transfer matrix method"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "http://pypi.python.org/pypi/tmm"
Repository = "https://github.com/sbyrnes321/tmm"

[tool.setuptools]
packages = ["tmm"]
package-dir = {"tmm" = "."}

[tool.setuptools.package-data]
tmm = [
    "README.rst",
    "LICENSE.txt",
    "Changes.txt",
    "manual.pdf",
    "examples.ipynb"
]
